test/expected/explain_static_cast_i-c.out
explain static_cast<int>(x)
        ^
9: error: "static_cast": unsupported keyword in C; did you mean "static_assert"?
